// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package org.chromium.chrome.browser.page_insights.proto;

option java_package = "org.chromium.chrome.browser.page_insights.proto";

option optimize_for = LITE_RUNTIME;

message PageInsightsMetadata {
  optional Page feed_page = 1;
  repeated Page pages = 2;
  optional AutoPeekConditions auto_peek_conditions = 3;
  optional bytes logging_cgi = 4;
}

message Page {
  enum PageID {
    PAGE_UNSPECIFIED = 0;
    PEOPLE_ALSO_VIEW = 1;
    ABOUT_THE_SOURCE = 2;
    SAFETY_REPORT_CARD = 3;
    CONTEXTUAL_ACTIONS = 4;
    ENTITY_OVERVIEW = 5;
    SINGLE_FEED_ROOT = 6;
  }
  optional PageID id = 1;

  optional string title = 2;

  optional bytes elements_output = 3;
}

message AutoPeekConditions {
  optional float confidence = 1;
  optional float page_scroll_fraction = 2;
  optional int32 minimum_seconds_on_page = 3;
}
